tests/ui/consts/const-item-no-type/empty-array.stderr
error[E0282]: type annotations needed
  --> $DIR/empty-array.rs:2:28
   |
LL |     const EMPTY_ARRAY: _ = [];
   |                            ^^ cannot infer type

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/empty-array.rs:2:24
   |
LL |     const EMPTY_ARRAY: _ = [];
   |                        ^ not allowed in type signatures

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0121, E0282.
For more information about an error, try `rustc --explain E0121`.
